[package]
name = "web3-sharp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.4" }
axum-extra = "0.8.0"
backtrace = "0.3.69"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
config = "0.13.3"
dotenv = "0.15.0"
once_cell = "1.18.0"
sea-orm = { version = "0.12.3", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
thiserror = "1.0.49"

tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.37"
tracing-appender = { version = "0.2.2" }
tracing-subscriber = { version = "0.3.17", features = ["std", "json", "local-time"] }

